--- a/AppCallOrtherProgram/AppCallOrtherProgram.iOS/AppCallOrtherProgram.iOS.csproj
+++ b/AppCallOrtherProgram/AppCallOrtherProgram.iOS/AppCallOrtherProgram.iOS.csproj
@@ -71,6 +71,7 @@
     <None Include="Info.plist">
       <SubType>Designer</SubType>
     </None>
+    <Compile Include="GetLinkiOS.cs" />
     <Compile Include="OpenAppiOS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -135,6 +136,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
